[gd_scene load_steps=15 format=1]

[ext_resource path="res://Script/alat.gd" type="Script" id=1]
[ext_resource path="res://Asset/game/alatbahan/air.png" type="Texture" id=2]
[ext_resource path="res://Asset/game/alatbahan/sekop.png" type="Texture" id=3]
[ext_resource path="res://Asset/game/alatbahan/sekopSelected.png" type="Texture" id=4]
[ext_resource path="res://Asset/game/alatbahan/pupuk.png" type="Texture" id=5]
[ext_resource path="res://Asset/game/alatbahan/pupukSelected.png" type="Texture" id=6]
[ext_resource path="res://Asset/game/alatbahan/penyangga.png" type="Texture" id=7]
[ext_resource path="res://Asset/game/alatbahan/penyanggaSelected.png" type="Texture" id=8]
[ext_resource path="res://Asset/game/alatbahan/bibitMerah.png" type="Texture" id=9]
[ext_resource path="res://Asset/game/alatbahan/bibitMerahSelected.png" type="Texture" id=10]
[ext_resource path="res://Asset/game/alatbahan/bibitKuning.png" type="Texture" id=11]
[ext_resource path="res://Asset/game/alatbahan/bibitKuningSelected.png" type="Texture" id=12]
[ext_resource path="res://Asset/game/alatbahan/bibitPutih.png" type="Texture" id=13]
[ext_resource path="res://Asset/game/alatbahan/bibitPutihSelected.png" type="Texture" id=14]

[node name="alat" type="Node2D"]

script/script = ExtResource( 1 )

[node name="air" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1148.0
margin/top = 23.0
margin/right = 1253.0
margin/bottom = 122.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 2 )
flat = true

[node name="sekop" type="Button" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1148.0
margin/top = 122.0
margin/right = 1253.0
margin/bottom = 221.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 3 )
flat = true

[node name="sekopSelected" type="Button" parent="sekop"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 12.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 4 )
flat = false

[node name="pupuk" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1148.0
margin/top = 224.0
margin/right = 1253.0
margin/bottom = 323.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 5 )
flat = true

[node name="pupukSelected" type="Button" parent="pupuk"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 105.0
margin/bottom = 99.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 6 )
flat = true

[node name="penyangga" type="Button" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1148.0
margin/top = 324.0
margin/right = 1253.0
margin/bottom = 423.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 7 )
flat = true

[node name="penyanggaSelected" type="Button" parent="penyangga"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 105.0
margin/bottom = 99.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 8 )
flat = true

[node name="bibitMerah" type="Button" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = 396.0
margin/right = 130.0
margin/bottom = 495.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 9 )
flat = true

[node name="bibitMerahSelected" type="Button" parent="bibitMerah"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 106.0
margin/bottom = 99.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 10 )
flat = true

[node name="bibitKuning" type="Button" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = 498.0
margin/right = 130.0
margin/bottom = 597.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 11 )
flat = true

[node name="bibitKuningSelected" type="Button" parent="bibitKuning"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 106.0
margin/bottom = 99.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 12 )
flat = true

[node name="bibitPutih" type="Button" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = 600.0
margin/right = 130.0
margin/bottom = 699.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 13 )
flat = true

[node name="bibitPutihSelected" type="Button" parent="bibitPutih"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 106.0
margin/bottom = 99.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 14 )
flat = true

[connection signal="pressed" from="sekop" to="." method="_on_sekop_pressed"]

[connection signal="pressed" from="sekop/sekopSelected" to="." method="_on_sekopSelected_pressed"]

[connection signal="pressed" from="pupuk" to="." method="_on_pupuk_pressed"]

[connection signal="pressed" from="pupuk/pupukSelected" to="." method="_on_pupukSelected_pressed"]

[connection signal="pressed" from="penyangga" to="." method="_on_penyangga_pressed"]

[connection signal="pressed" from="penyangga/penyanggaSelected" to="." method="_on_penyanggaSelected_pressed"]

[connection signal="pressed" from="bibitMerah" to="." method="_on_bibitMerah_pressed"]

[connection signal="pressed" from="bibitMerah/bibitMerahSelected" to="." method="_on_bibitMerahSelected_pressed"]

[connection signal="pressed" from="bibitKuning" to="." method="_on_bibitKuning_pressed"]

[connection signal="pressed" from="bibitKuning/bibitKuningSelected" to="." method="_on_bibitKuningSelected_pressed"]

[connection signal="pressed" from="bibitPutih" to="." method="_on_bibitPutih_pressed"]

[connection signal="pressed" from="bibitPutih/bibitPutihSelected" to="." method="_on_bibitPutihSelected_pressed"]


